tests/ui/rustdoc/cfg-rustdoc.stderr
error[E0425]: cannot find value `Foo` in this scope
  --> $DIR/cfg-rustdoc.rs:5:13
   |
LL |     let f = Foo;
   |             ^^^ not found in this scope

error: aborting due to previous error

For more information about this error, try `rustc --explain E0425`.
