tests/ui/rustdoc/cfg-rustdoc.rs
#[cfg(doc)]
pub struct Foo;

fn main() {
    let f = Foo; //~ ERROR
}
